2005-05-14  Carl Worth  <cworth@cworth.org>

	* src/cairo-atsui.h:
	* src/cairo-ft.h:
	* src/cairo-glitz.h:
	* src/cairo-pdf.h:
	* src/cairo-ps.h:
	* src/cairo-quartz.h:
	* src/cairo-win32.h:
	* src/cairo-xcb.h:
	* src/cairo-xlib.h: Add an #error if cairo-foo.h is included when
	cairo was compiled without support for the foo backend.

2005-05-14  Carl Worth  <cworth@cworth.org>

	* test/pdf-surface.c (main): Update for change in
	cairo_pdf_surface_create which no longer accepts DPI values.

2005-05-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c src/cairo-xlib.h
	doc/public/cairo-sections.txt: Drop the _for_pixmap() and
	_for_window() out of the create functions and use some lazy
	cleverness to sniff the information out as needed.

	* src/cairo-xlib-surface.c src/cairo-xlib-test.h Makefile.am: 
	add cairo_test_xlib_disable_render() to turn off RENDER
	for tests.

	* test/xlib-surface.c: Test various different types of 
	Xlib surface creation.

	* src/cairo-xlib.h: Remove left-over include of Xrender.h.

2005-05-13  Kristian Høgsberg  <krh@redhat.com>

	* src/cairo-pdf-surface.c (_cairo_pdf_document_open_stream): Make
	this a varg function and use the new
	_cairo_output_stream_vprintf() function to format extra dict
	contents.

	* src/cairo-output-stream.c (_cairo_output_stream_vprintf):
	Reimplement the printf logic so we can special case formatting of
	doubles to be locale independent and trim trailing zeros.

	* src/cairo-pdf-surface.c: Rename
	cairo_pdf_surface_create_for_callback() to
	cairo_pdf_surface_create_for_stream(), and change PDF constructors
	to take width and height as points and move PPI setting to
	cairo_pdf_surface_set_ppi()

2005-05-13  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal): Fix
	misplaced goto.
	
2005-05-12  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-image-surface.c: (_cairo_image_surface_create_with_masks):
	  Fix image->data to be unsigned
