@@ -1,5 +1,12 @@
 2005-05-14  Carl Worth  <cworth@cworth.org>
 
+	* src/cairo-xlib-surface.c: (cairo_test_xlib_disable_render),
+	(cairo_xlib_surface_create_with_visual):
+	* test/.cvsignore: Fix a few documentation typos in the recent
+	xlib surface rework.
+
+2005-05-14  Carl Worth  <cworth@cworth.org>
+
 	* src/cairo-atsui.h:
 	* src/cairo-ft.h:
 	* src/cairo-glitz.h:
